--- a/lab2/firstwebpage/flatpages/templates/static_handler.html
+++ b/lab2/firstwebpage/flatpages/templates/static_handler.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="{{ STATIC_URL }}static/index.css?version=51">
 <title>Привет, Мир!</title>
 </head>
 <body>
@@ -96,5 +97,7 @@ python/django, html/css.</h2>
 <td>Строка 7 Столбец 6</td>
 </tr>
 </table>
+<h4>Изображение:</h4>
+<img src="{{ STATIC_URL }}static/img/sunset.jpg">
 </body>
 </html>
