--- a/lab2/firstwebpage/flatpages/templates/static_handler.html
+++ b/lab2/firstwebpage/flatpages/templates/static_handler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="{{ STATIC_URL }}static/index.css?version=51">
+<link rel="stylesheet" href="{{ STATIC_URL }}static/index.css">
 <title>Привет, Мир!</title>
 </head>
 <body>
