--- a/lab4/blog/articles/static/article.css
+++ b/lab4/blog/articles/static/article.css
@@ -29,6 +29,7 @@ margin-left: 25%;
 width: 960px;
 margin-left: auto;
 margin-right: auto;
+clear: both;
 }
 
 .post-title a {
@@ -45,6 +46,7 @@ text-align: right;
 }
 
 .outer_link a {
-margin-left: 70%;
+margin-right: 25%;
 color: #ffffff;
+float: right;
 }
