--- a/lab4/blog/articles/templates/article.html
+++ b/lab4/blog/articles/templates/article.html
@@ -7,9 +7,10 @@
 </head>
 
 <div class="header_article">
-<img src="{{ STATIC_URL }}/static/img/logo.png" />
 <h4 class="outer_link"><a href="/">Все статьи</a></h4>
+<img src="{{ STATIC_URL }}/static/img/logo.png" />
 </div>
+ 
 
 <div class="article">
 <h2 class="post-title">{{ post.title }}</h2>
@@ -17,7 +18,7 @@
 <div class="article-author">{{ post.author.username }}</div>
 <div class="article-created-date">{{ post.created_date }}</div>
 </div>
-<p class="article-text">{{ post.get_excerpt }}</p>
+<p class="article-text">{{ post.text }}</p>
 </div>
 
 </body>
